<resources>
    <string name="app_name">蓝牙工具</string>
    <string name="name_company">江苏迈拓智能仪表有限公司</string>
    <string name="double_click_exit">再次点击退出江苏迈拓</string>
    <string name="login1">登&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;录</string>
    <string name="register">注&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;册</string>
    <string name="login2">直接登录</string>
    <string name="for_help">查看帮助</string>
    <string name="welcome_to_njmeter">欢迎使用江苏迈拓智能仪表客户端</string>
    <string name="welcome_introduction">智慧水务的未来：“智造”与“慧用”，智慧创造美好生活</string>
    <string name="function">物联网</string>
    <string name="theme">主题</string>
    <string name="function_introduction">大数据、工业4.0、互联网+、智能仪表、物联网，科技成就未来</string>
    <string name="tips_and_tricks">多功能</string>
    <string name="tips_introduction">遥控开关阀、用水状态实时查看、用水统计与查询，十八般武器样样都有</string>
    <string name="scan_barcode">将取景框对准条形码\n即可自动扫描</string>
    <string name="scan_qr_code">将取景框对准二维码\n即可自动扫描</string>
    <string name="back">返回</string>
    <string name="flashlight">闪光灯</string>
    <string name="operate">操作</string>
    <string name="operate_hydrant">仪表操作</string>
    <string name="operate_meter">仪表操作</string>
    <string name="statistics">统计</string>
    <string name="homepage">主页</string>
    <string name="product">产品</string>
    <string name="search">查询</string>
    <string name="help">帮助</string>
    <string name="account">账号</string>
    <string name="server">服务器：</string>
    <string name="input_server_host">请输入域名或服务器IP地址</string>
    <string name="http_port">端口一：</string>
    <string name="http_port2">端口号：</string>
    <string name="socket_port">端口二：</string>
    <string name="service_name">服务名：</string>
    <string name="input_http_port">请输入Http端口号</string>
    <string name="input_socket_port">请输入Socket端口号</string>
    <string name="input_service_name">请输入服务名</string>
    <string name="username">用户名：</string>
    <string name="username2">用户名</string>
    <string name="password2">密码</string>
    <string name="input_name">请输入用户名</string>
    <string name="password">密&#160;&#160;&#160;&#160;码：</string>
    <string name="input_password">请输入用户密码</string>
    <string name="fake_password">********</string>
    <string name="login_hydrant_user">智能消火栓用户登录</string>
    <string name="login_hydrant_manager">智能消火栓管理员登录</string>
    <string name="login_manager">管理员登录</string>
    <string name="platform_manager">管&#160;理\n平&#160;台</string>
    <string name="platform_user">用&#160;户\n平&#160;台</string>
    <string name="reminder_noLonger">下次不再提醒</string>
    <string name="text_logo">江苏迈拓智能仪表客户端</string>
    <string name="text_scan">将取景框对准二维码\n即可自动扫描</string>
    <string name="information_use_water">用水详情</string>
    <string name="time">时间：</string>
    <string name="method">方式：</string>
    <string name="id_meter">表号：</string>
    <string name="consumption">用量：</string>
    <string name="dialog_input_title">请输入正确的消火栓ID</string>
    <string name="dialog_input_text">请输入8位消火栓ID</string>
    <string name="dialog_input_cancel">取&#160;&#160;&#160;&#160;消</string>
    <string name="dialog_input_screenshot">截&#160;&#160;&#160;&#160;屏</string>
    <string name="dialog_input_clear">清&#160;&#160;&#160;&#160;空</string>
    <string name="dialog_input_ok">确&#160;&#160;&#160;&#160;定</string>
    <string name="dialog_input_continue">继&#160;&#160;&#160;&#160;续</string>
    <string name="dialog_loading">数据加载中……</string>
    <string name="title_home">实时信息查看</string>
    <string name="barcode">条形码</string>
    <string name="qr_code">二维码</string>
    <string name="bluetooth">蓝牙</string>
    <string name="nfc">NFC</string>
    <string name="information_user">用户及设备信息</string>
    <string name="id_app">用户ID</string>
    <string name="id_app2">用户ID：</string>
    <string name="id_hydrant2">消火栓ID：</string>
    <string name="id_hydrant3">消火栓ID:</string>
    <string name="input_id_meter">输入信息</string>
    <string name="open_lock">开阀门锁</string>
    <string name="close_lock">关阀门锁</string>
    <string name="choose_start_time">请选择起始日期:</string>
    <string name="choose_end_time">请选择结束日期:</string>
    <string name="search2">查    询</string>
    <string name="time_use_water">用水时间</string>
    <string name="range_time">(开始~结束)</string>
    <string name="id_hydrant">消火栓ID</string>
    <string name="id_user">用户ID</string>
    <string name="id_meter2">表具ID</string>
    <string name="method_open_lock">开阀\n方式</string>
    <string name="consumption_water">用水量</string>
    <string name="total_consumption_water">总用水量</string>
    <string name="unit_consumption_water">(立方米)</string>
    <string name="show_list">列表显示</string>
    <string name="show_chart">图表显示</string>
    <string name="last_twenty_times">最近20次用水量趋势图</string>
    <string name="total_times">历史总用水次数:</string>
    <string name="total_consumption">历史总用水量:</string>
    <string name="max_consumption">历史最高用水量:</string>
    <string name="min_consumption">历史最低用水量:</string>
    <string name="average_consumption">历史平均用水量:</string>
    <string name="example_consumption">000.000m³</string>
    <string name="example_times">0次</string>
    <string name="start_time">开始时间</string>
    <string name="end_time">结束时间</string>
    <string name="contact">联系电话:+86 025&#8211;86981981 86981982\n联系地址:江苏省南京市滨江经济开发区喜燕路5号\n版权所有 © 江苏迈拓智能仪表有限公司 2017</string>
    <string name="title_warning">迈拓仪表</string>
    <string name="text_warning">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;迈拓仪表提醒您：您刚刚使用的消火栓阀门未关紧，为了节约水资源和减少您的用水量，请关紧阀门后再离开，谢谢！</string>
    <string name="located">定位</string>
    <string name="satellite">卫星</string>
    <string name="compass">指南</string>
    <string name="unknown">未知</string>
    <string name="zero">0</string>
    <string name="cancel">取&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;消</string>
    <string name="cancel2">取消</string>
    <string name="done">完成</string>
    <string name="add_from_gallery">通过相册添加</string>
    <string name="camera">打开相机拍照</string>
    <string name="dialog_input_title2">请输入相关补充信息</string>
    <string name="information_meet_the_requirements">共查询到n条符合要求的信息</string>
    <string name="choose_one">(请点击选择一条)</string>
    <string name="photos_num">%1$d张</string>
    <string name="msg_no_camera">没找到摄像头</string>
    <string name="msg_maxi_capacity">已达到照片选择上限</string>
    <string name="commit">确定</string>
    <string name="time_commit">提交时间：</string>
    <string name="time_commit2">提交时间</string>
    <string name="information_feedback">反馈信息</string>
    <string name="information_alarm_hydrant">报警信息</string>
    <string name="details_alarm_hydrant">报警信息详情</string>
    <string name="commit_num">确定(%1$d/%2$d)</string>
    <string name="platform_hydrant">智能消火栓</string>
    <string name="platform_hydrant_manager2">智能消火栓管理平台</string>
    <string name="platform_hydrant_user2">智能消火栓用户平台</string>
    <string name="platform_water_meter">超声水表</string>
    <string name="platform_heat_meter">超声热量表</string>
    <string name="platform_hot_meter_manager">智能热量表</string>
    <string name="platform_bluetooth_device">蓝牙工具</string>
    <string name="platform_read_waterMeter">机械表抄表</string>
    <string name="platform_read_waterMeter_bluetooth">蓝牙工具\n抄表系统</string>
    <string name="platform_install_repair_watermeter">水表安装维修</string>
    <string name="platform_install_repair2">安装报修</string>
    <string name="platform_service_manager">智慧计量服务</string>
    <string name="platform_service_manager2">综合信息</string>
    <string name="platform_service_user">综合信息</string>
    <string name="cancel_above_choose">取消以上平台选择</string>
    <string name="pages">1024张</string>
    <string name="login_water_meter_manager">智能水表平台管理员登录</string>
    <string name="account_hydrant_user">用户账号</string>
    <string name="account_hydrant_manager">管理员账号</string>
    <string name="username_hydrant_user">账号</string>
    <string name="user_password_hydrant_user">密码</string>
    <string name="username_hydrant_manager">账号</string>
    <string name="user_password_hydrant_manager">密码</string>
    <string name="none">无</string>
    <string name="time2">时间</string>
    <string name="logout">退出登录</string>
    <string name="setting">设置</string>
    <string name="setting_general">常规设置</string>
    <string name="setting_account">账号设置</string>
    <string name="notification">消息通知</string>
    <string name="setting_self">个性设置</string>
    <string name="show_page_lead">显示引导页面</string>
    <string name="show_page_welcome">显示欢迎页面</string>
    <string name="come_into_chosen_platform">直接进入我选择的的平台</string>
    <string name="open_incognito_mode">开启无痕模式</string>
    <string name="setting_others">其他设置</string>
    <string name="show_version">版本查看</string>
    <string name="protocol">用户协议</string>
    <string name="bluetooth_tools">蓝牙工具</string>
    <string name="open_debug_mode">调试模式</string>
    <string name="share_to_friends">分享给好友</string>
    <string name="reset_all_settings">恢复默认设置</string>
    <string name="items">项目</string>
    <string name="details_feedback">反馈详情</string>
    <string name="current_data">当前数据</string>
    <string name="id_current_user">当前用户ID</string>
    <string name="dash">—</string>
    <string name="time_open_lock">开锁时间</string>
    <string name="device_open_lock">开锁设备</string>
    <string name="consumption_current_water">当前用水量</string>
    <string name="state_current_use">当前使用状态</string>
    <string name="not_close_tightly">未关紧阀</string>
    <string name="leakage_without_user">无用户漏水</string>
    <string name="input_content_search">请输入搜索内容</string>
    <string name="searches_recent">最近搜索记录</string>
    <string name="upload_information">上传信息</string>
    <string name="download_information">获取信息</string>
    <string name="search_information">信息查询</string>
    <string name="show_list_chart">图表展示</string>
    <string name="address_hydrant">消火栓地点</string>
    <string name="imei_hydrant">消火栓IMEI</string>
    <string name="imei">IMEI：</string>
    <string name="imei2">IMEI</string>
    <string name="address">地点：</string>
    <string name="create_time">创建时间：</string>
    <string name="map">地图</string>
    <string name="map_navigation">地图导航</string>
    <string name="write_feedback">请填写反馈信息</string>
    <string name="tips_search_hydrant_warning">查询说明</string>
    <string name="tips_search_hydrant_warning2">一、点击“查询”按钮将查询所有消火栓最后一次上传的报警信息，并与所选的报警项进行匹配，至少有一项相符的消火栓将被筛选并显示；\n二、点击查询结果的每一个消火栓标签可以显示该消火栓本次报警的详细信息；\n三、选择自动查询将每隔一定时间查询一次所勾选的报警项并刷新数据，自动查询消耗流量较多，建议在WiFi下使用；\n四、自动查询时间间隔可在下方设置，设置后需关闭再打开自动查询功能或重启应用生效。</string>
    <string name="input_id_hydrant">扫描或输入消火栓ID号</string>
    <string name="read_alarm_data">读取报\n警参数</string>
    <string name="set_alarm_data">设置报\n警参数</string>
    <string name="read_alarm_state">读取报\n警状态</string>
    <string name="read_hydrant_data">读取表\n数据</string>
    <string name="read_gps">读取GPS\n坐标</string>
    <string name="refresh_gps">刷新GPS\n坐标</string>
    <string name="read_current_use_data">读取当前\n使用数据</string>
    <string name="read_history_use_data">读取历史\n使用记录</string>
    <string name="read_alarm_enabled">读取报\n警使能</string>
    <string name="set_alarm_enabled">设置报\n警使能</string>
    <string name="open_lock_hydrant">开消火栓\n阀门锁</string>
    <string name="close_lock_hydrant">关消火栓\n阀门锁</string>
    <string name="setparameter_readparameter">获取表号</string>
    <string name="setparameter_meteridhint">请输入8位出厂编码</string>
    <string name="setparameter_setmeterid">替换为11</string>
    <string name="setparameter_openvalve">开阀</string>
    <string name="setparameter_closevalve">关阀</string>
    <string name="setparameter_amendmeterid">修改表号</string>
    <string name="setparameter_amendmeteridhint">请输入8位出厂编码</string>
    <string name="setparameter_insteadmeterid">替换至上</string>
    <string name="setparameter_adjusttime">校正时钟</string>
    <string name="setparameter_endtime">修改截止日期</string>
    <string name="setparameter_sendtx">请输入发送信息</string>
    <string name="setparameter_cs16">+CS+16</string>
    <string name="setparameter_send">发送</string>
    <string name="topworx_setlorach">修改频道</string>
</resources>