<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#ffefebe7">
    <!--注意:外层LinearLayout不能删除，否则Fragment中处理软键盘时不能使用getLayoutParams()方法-->
    <ScrollView
        android:id="@+id/scrollView_root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffefebe7">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/dp_5">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5.0dip">

                <Button
                    android:id="@+id/btn_read_parameter"
                    style="@style/button_common_blue_s"
                    android:gravity="center"
                    android:text="@string/setparameter_readparameter" />

                <EditText
                    android:id="@+id/et_meterId"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/dp_5"
                    android:layout_marginStart="@dimen/dp_5"
                    android:layout_weight="1"
                    android:background="@drawable/edit_text_x"
                    android:gravity="center"
                    android:hint="@string/setparameter_meteridhint"
                    android:inputType="number"
                    android:maxLength="8"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_18">

                </EditText>

                <Button
                    android:id="@+id/Buttonsetmeterid"
                    style="@style/button_common_blue_s"
                    android:layout_marginLeft="@dimen/dp_5"
                    android:layout_marginStart="@dimen/dp_5"
                    android:gravity="center"
                    android:text="@string/setparameter_setmeterid" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15.0dip">

                <Button
                    android:id="@+id/btn_amend_meterid"
                    style="@style/button_common_blue_s"
                    android:gravity="center"
                    android:text="@string/setparameter_amendmeterid" />

                <EditText
                    android:id="@+id/et_amend_meterId"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/dp_5"
                    android:layout_marginStart="@dimen/dp_5"
                    android:layout_weight="1"
                    android:background="@drawable/edit_text_x"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/setparameter_amendmeteridhint"
                    android:inputType="number"
                    android:maxLength="8"
                    android:maxLines="1"
                    android:textColor="@color/black">

                </EditText>

                <Button
                    android:id="@+id/Buttoninsteadmeterid"
                    style="@style/button_common_blue_s"
                    android:layout_marginLeft="@dimen/dp_5"
                    android:layout_marginStart="@dimen/dp_5"
                    android:gravity="center"
                    android:text="@string/setparameter_insteadmeterid" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15.0dip"
                android:gravity="center_horizontal">

                <Button
                    android:id="@+id/btn_open_valve"
                    style="@style/button_common_blue_s"
                    android:layout_marginEnd="@dimen/dp_10"
                    android:layout_marginRight="@dimen/dp_10"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/setparameter_openvalve" />

                <Button
                    android:id="@+id/btn_close_valve"
                    style="@style/button_common_blue_s"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:layout_marginStart="@dimen/dp_10"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/setparameter_closevalve" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15.0dip"
                android:gravity="center_vertical">

                <EditText
                    android:id="@+id/et_endDate"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dp_40"
                    android:layout_weight="1"
                    android:background="@drawable/edit_text_x"
                    android:gravity="center"
                    android:inputType="date"
                    android:textColor="@color/black" />

                <Button
                    android:id="@+id/btnTopworxChoosedate"
                    style="@style/button_common_blue_s"
                    android:layout_marginLeft="@dimen/dp_5"
                    android:layout_marginStart="@dimen/dp_5"
                    android:gravity="center"
                    android:text="选择日期" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5.0dip">

                <Button
                    android:id="@+id/btnTopworxEndTime"
                    style="@style/button_common_blue"
                    android:gravity="center"
                    android:text="@string/setparameter_endtime" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_5"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/tv_date"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/dp_40"
                        android:layout_weight="1"
                        android:background="@drawable/edit_text_x"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:textSize="@dimen/sp_16" />

                    <View
                        android:layout_width="@dimen/dp_1"
                        android:layout_height="match_parent"
                        android:background="@color/darkgray" />

                    <TextView
                        android:id="@+id/tv_time"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/dp_40"
                        android:layout_weight="1"
                        android:background="@drawable/edit_text_x"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:textSize="@dimen/sp_16" />
                </LinearLayout>

                <CheckBox
                    android:id="@+id/CheckBoxsyn"
                    android:layout_width="35dp"
                    android:layout_height="@dimen/dp_40"
                    android:checked="true" />

                <Button
                    android:id="@+id/Buttonadjusttime"
                    style="@style/button_common_blue_s"
                    android:layout_marginLeft="@dimen/dp_5"
                    android:layout_marginStart="@dimen/dp_5"
                    android:gravity="center"
                    android:text="@string/setparameter_adjusttime" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10">

                <Spinner
                    android:id="@+id/spinnerlorach"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dp_40"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/btnSetCH"
                    style="@style/button_common_blue_s"
                    android:layout_marginLeft="@dimen/dp_5"
                    android:layout_marginStart="@dimen/dp_5"
                    android:gravity="center"
                    android:text="@string/topworx_setlorach" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15.0dip"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/EditTextsend"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dp_80"
                    android:layout_weight="1"
                    android:background="@drawable/edit_text_x"
                    android:gravity="top|start"
                    android:hint="@string/setparameter_sendtx"
                    android:textColor="@color/black" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_5"
                    android:layout_marginStart="@dimen/dp_5"
                    android:gravity="center"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/Buttoncs16"
                        style="@style/button_common_blue_s"
                        android:gravity="center"
                        android:text="@string/setparameter_cs16" />

                    <Button
                        android:id="@+id/Buttonsend"
                        style="@style/button_common_blue_s"
                        android:layout_marginTop="@dimen/dp_5"
                        android:gravity="center"
                        android:text="@string/setparameter_send" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </ScrollView>
</LinearLayout>